--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,7 +1,7 @@
 <html>
   <title>Start a new To-Do list</title>
   <h1>Your To-Do list</h1>
-  <form method="POST">
+  <form method="POST" action="/lists/new">
     <input id="id_new_item" name="item_text" placeholder="Enter a to-do item" />
     {% csrf_token %}
   </form>
