--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,8 +1,5 @@
-<html>
-  <title>Start a new To-Do list</title>
-  <h1>Your To-Do list</h1>
-  <form method="POST" action="/lists/new">
-    <input id="id_new_item" name="item_text" placeholder="Enter a to-do item" />
-    {% csrf_token %}
-  </form>
-</html>
+{% extends 'base.html' %}
+
+{% block header_text %}Start a new To-Do list{% endblock %}
+
+{% block form_action %}/lists/new{% endblock %}
