--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,10 +1,10 @@
-<html>
-  <title>To-Do lists</title>
-  <h1>Your To-Do list</h1>
-  <form method="POST" action="/lists/{{ list.id }}/add_item">
-    <input id="id_new_item" name="item_text" placeholder="Enter a to-do item" />
-    {% csrf_token %}
-  </form>
+{% extends 'base.html' %}
+
+{% block header_text %}Your To-Do list{% endblock %}
+
+{% block form_action %}/lists/{{ list.id }}/add_item{% endblock %}
+
+{% block table %}
   <table id="id_list_table">
     {% for item in list.item_set.all %}
     <tr>
@@ -12,4 +12,4 @@
     </tr>
     {% endfor %}
   </table>
-</html>
+{% endblock %}
